--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,23 @@
 {
-  "name": "External links",
   "manifest_version": 3,
-  "version": "0.1",
-  "description": "A browser extension that empowers users to open any link on a webpage externally",
-  "permissions": ["activeTab", "scripting"],
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["services/index.js"]
+  "name": "Externalize my links - BETA",
+  "version": "0.1.1",
+  "version_name": "0.1 beta",
+  "description": "A browser extension that empowers users to open any link on a webpage externally.(THIS EXTENSION IS FOR BETA TESTING)",
+  "author": "essaadihamza@gmail.com",
+  "permissions": ["activeTab", "scripting", "storage"],
+  "action": {
+    "default_popup": "popup/index.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "32": "images/icon32.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
     }
-  ]
+  },
+
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  }
 }
